# verified-code-cot

./: .gitignore  COT_PIPELINE_GUIDE.md  README.md  pipeline_config.yaml  pyproject.toml  setenv.sh
docs/superpowers/plans/: 2026-04-23-codecot-pipeline.md
examples/: display.py  generate_concepts.py  generate_samples.py  generate_sol_tests.py  run_demo.py  test_concepts.txt
examples/sample_outputs/raw/: concepts.json  dual_exec_results.jsonl  out_solutions.json  out_test_cases.json  trace_snippet.json
src/dataops_code_cot/components/execution/: dual_exec.py
src/dataops_code_cot/components/execution/python/: _execution.py  agreement.py  evaluation.py  execution.py  io_utils.py  postprocess.py
src/dataops_code_cot/components/generation/: concepts_generation.py  prompts_batch.json  solutions_and_testcases_generation.py  split_tests.py  split_tests_batched.py
src/dataops_code_cot/scripts/: best_test_case_annotation.py  best_test_case_filter.py  clean_trace.py  compress_long_traces.py  cot_jsonl_to_jsonl.py  cot_verifier.py  execution_traces_annotation_python.py  fetch_code_entry_point.py  filter_qa_based_on_score.py  generate_cots_batched.py  get_traces.py  max_tokens_client_vals.py  prompts.json  rate_conv_QA_v3.py
src/dataops_code_cot/utils/: __init__.py  model_client.py  rits.py  vllm.py
